--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -52,7 +52,47 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pátek 22.10.2021</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="polevka">
+<div class="polozka">300 ml Karotkový krém s krutony samostatně  <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300 ml Karotkový krém s krutony v menu  <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Pstruh pečený na bylinkovém másle bramborovo-celerové puré, limetková omáčka  <em title="Ryby">4</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">159 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Kuřecí prso v tandori omáčce, dušená rýže, čerstvá zelenina <em title="Mléko">7</em><em title="Celer">9</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Houbové kroupeto se špenátem a sazeným vejcem, čerstvá majoranka, parmazán <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">4. </span>200g Kokosový puding s pečenou dýní a perníkovým kořením bez lepku a laktózy <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">5. </span>Karamelová pěna s hruškou </div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">6. </span>100g Mrkvový dort</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -130,7 +170,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li> Peceny filet z lofotske makrely s krenovou jogurtovou omackou, pecene baby brambory, salatek z cervene repy 139</li><li>Peceny filet z cerstveho chnapala malabarskeho s krenovou jogurtovou omackou, pecene baby brambory, salatek z cervene repy 175</li><li>Japonsky ramen s pecenym veprovym ve sladke chilli marinade, gaj coj, psenicnymi nudlemi a sazenym vajickem v silnem hovezim vyvaru se zelenymi bylinkami 139</li><li>Peceny rolovany danci bok s nadivkou s kachnimi jatry, chlupate knedliky, ruzove zeli s jablky {L} 165</li><li>Pecene papriky plnene cizrnovym kari s pecenou dyni a zeleninou, salatek 139</li></ol>
+<ol><li>Thajske cervene kari s kousky rybich filetu {treska, makrela, nilsky okoun}, tamarindem, kokosovym mlekem a zeleninou, jasminova ryze 139</li><li>Pecena cerstva prazma s kaparovym maslem, bramborovy salat s cervenou repou, jogurtem, cibulkou a petrzelkou 175</li><li>Pecena kruta s omackou teriyaki a prazenym sezamem, jasminova ryze, cukemono z pak coj, mrkve a kedluben 139</li><li>Smazene rizecky z teleci kyty a panenske svickove, bramborovy salat s cervenou repou, jogurtem, cibulkou a petrzelkou, citron {L} 169</li><li>Bramborove gnocchi s rajcaty, maslovymi fazolemi, gaj coj a parmezanem, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
