Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,24 +7,24 @@
 <h5>Pátek, 22. 10. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Houbová smetanová</strong>
+<strong>Kapustová s krůtím masem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Uzená krkovička se špenátem a bramborovým knedlíkem</strong>
+<strong>Hovězí na víně s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							129,-
 						</span>
 </p>
 <p>
-<strong>Grilovaný kozí sýr na salátku s pečenou paprikou a bagetkou</strong>
+<strong>Bramborové šišky s mákem, máslem a cukrem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							129,-
+							105,-
 						</span>
 </p>
 <p>
