Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -170,7 +170,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Thajske cervene kari s kousky rybich filetu {treska, makrela, nilsky okoun}, tamarindem, kokosovym mlekem a zeleninou, jasminova ryze 139</li><li>Pecena cerstva prazma s kaparovym maslem, bramborovy salat s cervenou repou, jogurtem, cibulkou a petrzelkou 175</li><li>Pecena kruta s omackou teriyaki a prazenym sezamem, jasminova ryze, cukemono z pak coj, mrkve a kedluben 139</li><li>Smazene rizecky z teleci kyty a panenske svickove, bramborovy salat s cervenou repou, jogurtem, cibulkou a petrzelkou, citron {L} 169</li><li>Bramborove gnocchi s rajcaty, maslovymi fazolemi, gaj coj a parmezanem, salatek {L} 139</li></ol>
+<ol><li>Peceny pstruh s omackou puttanesca {rajcata, kapary, ancovicky, olivy, petrzelka}, zeleninovy kuskus, salatek {L} 139</li><li>Peceny filet z cerstveho norskeho lososa s omackou puttanesca, zeleninovy kuskus, salatek {L} 169</li><li>Korejska veprova zebirka v merunkove marinade s chilli, miso a zazvorem, jasminova ryze, salatek 139</li><li>Grilovane medailonky z irskeho hoveziho krku {chuck roll} s krenovym dipem s dijonskou horcici, pecene baby brambory, salatek 169</li><li>Ratatouille z pecene zeleniny s balkanskym syrem a zelenymi bylinkami, pohanka se smazenou cibulkou, salatek 139</li></ol>
 </td>
 </tr>
 </table>
