Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,24 +7,24 @@
 <h5>Pondělí, 25. 10. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Kapustová s krůtím masem</strong>
+<strong>Špenátová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Hovězí na víně s rýží</strong>
+<strong>Hovězí guláš s houskovým knedlíkem nebo rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							129,-
 						</span>
 </p>
 <p>
-<strong>Bramborové šišky s mákem, máslem a cukrem</strong>
+<strong>Zapečené brambory s uzeným masem, okurkou NEBO červenou řepou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							105,-
+							125,-
 						</span>
 </p>
 <p>
