Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,24 +7,24 @@
 <h5>Úterý, 26. 10. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Špenátová</strong>
+<strong>Zeleninová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Hovězí guláš s houskovým knedlíkem nebo rýží</strong>
+<strong>Smažený hermelín s hranolkami a tatarkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							129,-
 						</span>
 </p>
 <p>
-<strong>Zapečené brambory s uzeným masem, okurkou NEBO červenou řepou</strong>
+<strong>Uzená krkovička se šťouchaným bramborem a cibulkami</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							125,-
+							127,-
 						</span>
 </p>
 <p>
@@ -130,7 +130,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny pstruh s omackou puttanesca {rajcata, kapary, ancovicky, olivy, petrzelka}, zeleninovy kuskus, salatek {L} 139</li><li>Peceny filet z cerstveho norskeho lososa s omackou puttanesca, zeleninovy kuskus, salatek {L} 169</li><li>Korejska veprova zebirka v merunkove marinade s chilli, miso a zazvorem, jasminova ryze, salatek 139</li><li>Grilovane medailonky z irskeho hoveziho krku {chuck roll} s krenovym dipem s dijonskou horcici, pecene baby brambory, salatek 169</li><li>Ratatouille z pecene zeleniny s balkanskym syrem a zelenymi bylinkami, pohanka se smazenou cibulkou, salatek 139</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s ananasovou salsou, cockovy salat s paprikami, cuketami, maslovymi fazolemi a petrzelkou 139</li><li>Peceny filet z cerstveho mecouna a maslove ryby s ananasovou salsou, cockovy salat s paprikami, cuketami, maslovymi fazolemi a petrzelkou 175</li><li>Rostbif z hoveziho rostence s pikantni paprikovou salsou, pecene baby brambory, salatek 139</li><li>Grilovane jehneci kofte s okurkovymi tzatziki, zeleninovy kuskus s bylinkami, salatek {L} 165</li><li>Kapustove placicky s muskatem a smazenou cibulkou, stouchane brambory, tatarska omacka {L} 139</li></ol>
 </td>
 </tr>
 </table>
