Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -175,7 +175,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s ananasovou salsou, cockovy salat s paprikami, cuketami, maslovymi fazolemi a petrzelkou 139</li><li>Peceny filet z cerstveho mecouna a maslove ryby s ananasovou salsou, cockovy salat s paprikami, cuketami, maslovymi fazolemi a petrzelkou 175</li><li>Rostbif z hoveziho rostence s pikantni paprikovou salsou, pecene baby brambory, salatek 139</li><li>Grilovane jehneci kofte s okurkovymi tzatziki, zeleninovy kuskus s bylinkami, salatek {L} 165</li><li>Kapustove placicky s muskatem a smazenou cibulkou, stouchane brambory, tatarska omacka {L} 139</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s ananasovou salsou, teply cockovy salat s paprikami, cuketami, maslovymi fazolemi a petrzelkou 139</li><li>Peceny filet z cerstveho mecouna a maslove ryby s ananasovou salsou, teply cockovy salat s paprikami, cuketami, maslovymi fazolemi a petrzelkou 175</li><li>Rostbif z hoveziho rostence s pikantni paprikovou salsou, pecene baby brambory, salatek 139</li><li>Grilovane jehneci kofte s okurkovymi tzatziki, zeleninovy kuskus s bylinkami, salatek {L} 165</li><li>Kapustove placicky s muskatem a smazenou cibulkou, stouchane brambory, tatarska omacka {L} 139</li></ol>
 </td>
 </tr>
 </table>
